# reactors

./: .gitignore  Cargo.toml  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: birth_death.py  boolean_network.py  cell_growth.py  covid_intervention_optimizer.py  covid_sir.py  enzyme_kinetics.py  grn_sparse_network.py  large_benchmark.py  michaelis_menten_deterministic.py  parameter_inference_mcmc.py  performance_scaling.py  pk_optimizer.py  rare_event_estimation.py  rna_splicing.py  rna_velocity_abc.py  single_cell_pharmacokinetics.py  toggle_switch.py  toggle_switch_optimizer.py  transcriptional_burst_analysis.py
examples/output/: .gitkeep
python/: run_all_examples.py
python/reactors/: __init__.py
src/: lib.rs  tests.rs
