[package]
name = "reactors"
version = "0.1.0"
edition = "2024"
authors = ["Pablo Rodriguez-Mier <pablo.rodriguez.mier@gmail.com>"]
description = "A blazing-fast Python engine to simulate reaction networks, written in Rust"
license = "BSD-3-Clause"

[lib]
name = "reactors"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }
numpy = "0.27"
rayon = "1.11"
rand = { version = "0.8", features = ["std", "small_rng"] }
rand_chacha = "0.3"
thiserror = "1.0"
meval = "0.2"

[profile.dist-release]
inherits = "release"
codegen-units = 1
debug = false
lto = "fat"
